# AI-Personal-Assistant

./: .env.example  .gitignore  README.md  package.json  requirements.txt
apps/plane/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/plane/src/: App.tsx  index.css  main.tsx
apps/plane/src-tauri/: Cargo.toml  tauri.conf.json
apps/plane/src-tauri/src/: lib.rs  main.rs
apps/plane/src/components/: AgentPlane.tsx  ChatPanel.tsx  Header.tsx  InputBar.tsx
apps/plane/src/lib/: api.ts
apps/plane/src/theme/: ThemeContext.tsx
config/: mcp.json  planner_prompt.txt  system_prompt.txt
docker/: Dockerfile.mcp  docker-compose.yml
documents/: sample.txt
java-test/: HelloCursor.java
mcp_servers/: requirements.txt
mcp_servers/agent_tools/: __init__.py  __main__.py  paths.py  server.py
scripts/: debug_parser.py  probe_stream.py  run_mcp_local.ps1  start_mcp.ps1  start_plane.ps1  test_decoder_utils.py  test_grep_tool.py  test_mcp.py  test_terminal_cwd.py  test_wire_agent.py
src/: action_parser.py  agent.py  agent_memory.py  ai_assistant.py  config.py  cursor_agent_assistant.py  cursor_assistant.py  document_loader.py  embeddings.py  main.py  memory.py  planner.py  prompts.py  retrieval.py  runtime.py  task_executor.py  tools.py  vector_store.py  voice_input.py
src/api/: __init__.py  models.py  server.py  service.py
src/cursor_client/: __init__.py  _vendor.py  agent_wire.py  client.py  decoder_utils.py  tool_call_parser.py  workspace_executor.py
src/mcp_client/: __init__.py  bridge.py  manager.py
