[package]
name = "plane"
version = "0.1.0"
description = "Plane — Cursor agent terminal"
authors = ["you"]
edition = "2021"

[lib]
name = "plane_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
